[tool.poetry]
name = "dbt-step-by-step"
version = "0.1.0"
description = ""
authors = ["Fabio Simoes <fabio.simoes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt = "^1.0.0.35.1"
dbt-postgres = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
